[package]
name = "nullnet-proxy-test"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
pingora-core = { version = "0.7.0", features = ["rustls"] }
pingora-proxy = "0.7.0"
nullnet-grpc-lib = { git = "https://github.com/GyulyVGC/nullnet-grpc.git" }
nullnet-liberror = "0.1.1"
tokio = { version = "1.51.0", features = ["rt-multi-thread"] }
