[package]
name = "nullnet-proxy-test"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
pingora-core = { version = "0.8.0", features = ["rustls"] }
pingora-proxy = "0.8.0"
nullnet-grpc-lib = { git = "https://github.com/GyulyVGC/nullnet-grpc.git" }
nullnet-liberror = { git = "https://github.com/NullNet-ai/libguard.git", branch = "nullnet-liberror-print" }
tokio = { version = "1.51.1", features = ["rt-multi-thread"] }
gag = "1.0.0"
chrono = "0.4.44"
